# js

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel
.aspect/: config.axl
tools/: BUILD.bazel  repin
tools/format/: BUILD.bazel
tools/gazelle/: BUILD.bazel
